# SyntheticData

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cli  NOTICE  README.md  RustGraph  cliff.toml  deny.toml  docker-compose.yml
crates/datasynth-audit-fsm/: Cargo.toml  README.md
crates/datasynth-audit-fsm/blueprints/: deloitte_fsa.yaml  deloitte_isa_complete.yaml  kpmg_fsa.yaml  kpmg_isa_complete.yaml  pcaob_integrated.yaml  pwc_fsa.yaml  pwc_isa_complete.yaml  regulatory_exam.yaml  soc2_type2.yaml
crates/datasynth-audit-fsm/inventories/: data_analytics_inventory_fsa.json  data_analytics_inventory_ia.json  data_analytics_inventory_pcaob.json  data_analytics_inventory_regulatory.json  data_analytics_inventory_soc2.json  form_ontology.json
crates/datasynth-audit-fsm/overlays/: default.yaml  industry_financial_services.yaml  industry_manufacturing.yaml  industry_retail.yaml  rushed.yaml  thorough.yaml
crates/datasynth-audit-fsm/src/: analytics_inventory.rs  artifact.rs  benchmark.rs  content.rs  content_claude.rs  context.rs  dispatch.rs  engine.rs  error.rs  event.rs  lib.rs  live_injection.rs  loader.rs  schema.rs  streaming.rs
crates/datasynth-audit-fsm/tests/: big4_integration.rs  deep_evaluation.rs  evaluate_output.rs  financial_coherence_tests.rs  fsa_integration.rs  gam_integration.rs  ia_integration.rs  regulatory_exam_integration.rs  wave1_e2e.rs
crates/datasynth-audit-optimizer/: Cargo.toml  README.md
crates/datasynth-audit-optimizer/src/: benchmark_comparison.rs  blueprint_testing.rs  calibration.rs  conformance.rs  constrained.rs  discovery.rs  graph.rs  group_audit.rs  lib.rs  monte_carlo.rs  overlay_fitting.rs  portfolio.rs  report.rs  resource_optimizer.rs  risk_scoping.rs  shortest_path.rs  yoy_chain.rs
crates/datasynth-audit-optimizer/tests/: big4_benchmark.rs  wave2_e2e.rs  wave2_evaluation.rs  wave3_e2e.rs  wave4_e2e.rs
crates/datasynth-banking/: Cargo.toml
crates/datasynth-banking/src/: config.rs  lib.rs  orchestrator.rs  seed_offsets.rs
crates/datasynth-banking/tests/: banking_integration.rs  banking_typology_integration.rs  banking_validation_tests.rs
crates/datasynth-cli/: Cargo.toml
crates/datasynth-cli/src/: main.rs  output_writer.rs
crates/datasynth-cli/tests/: audit_output_completeness.rs  cli_tests.rs  e2e_tests.rs
crates/datasynth-config/: Cargo.toml  README.md
crates/datasynth-config/src/: env_interpolation.rs  lib.rs  presets.rs  schema.rs  validation.rs
crates/datasynth-config/tests/: audit_preset_test.rs  causal_dag_template_test.rs  config_validation_integration.rs  fraud_packs_integration.rs
crates/datasynth-core/: Cargo.toml  README.md
crates/datasynth-core/country-packs/: CA.json  CN.json  DE.json  ES.json  FR.json  GB.json  IN.json  IT.json  JP.json  US.json  _default.json
crates/datasynth-core/resources/: skr04_2024.json
crates/datasynth-core/src/: accounts.rs  cpu_monitor.rs  degradation.rs  disk_guard.rs  framework_accounts.rs  lib.rs  memory_guard.rs  pcg.rs  pcg_loader.rs  resource_guard.rs  skr.rs  skr_loader.rs  utils.rs  uuid_factory.rs
crates/datasynth-core/tests/: graph_properties_tests.rs  group_structure_test.rs  internal_control.rs  model_enhancements.rs  proptest_balance.rs  proptest_distributions.rs  realism_integration_tests.rs  risk_assessment.rs  scenario_models_integration.rs
crates/datasynth-eval/: Cargo.toml
crates/datasynth-eval/src/: config.rs  diff_engine.rs  lib.rs  scenario_diff.rs
crates/datasynth-eval/tests/: coherence_integration.rs  diff_engine_integration.rs  eval_balance_integration.rs  eval_benford_integration.rs  eval_comprehensive_integration.rs  je_risk_scoring_test.rs  ratio_analysis_test.rs  sampling_validation_test.rs  trend_analysis_test.rs
crates/datasynth-fingerprint/: Cargo.toml  README.md
crates/datasynth-fingerprint/src/: lib.rs
crates/datasynth-fingerprint/tests/: integration_test.rs
crates/datasynth-generators/: Cargo.toml  README.md
crates/datasynth-generators/src/: bank_reconciliation_generator.rs  budget_generator.rs  coa_generator.rs  company_selector.rs  control_generator.rs  drift_event_generator.rs  governance_generator.rs  industry_benchmark_generator.rs  it_controls_generator.rs  je_generator.rs  kpi_generator.rs  legal_document_generator.rs  lib.rs  management_report_generator.rs  organizational_event_generator.rs  organizational_profile_generator.rs  prior_year_generator.rs  process_evolution_generator.rs  sales_quote_generator.rs  user_generator.rs
crates/datasynth-generators/tests/: accounting_estimates_test.rs  anomaly_taxonomy_validation_tests.rs  audit_docs_test.rs  audit_opinion_test.rs  business_combination_test.rs  coa_canonical_accounts.rs  component_audit_test.rs  consolidation_test.rs  cra_materiality_test.rs  currency_translation_test.rs  deferred_tax_test.rs  document_fk_test.rs  document_flow_je_accounts.rs  ecl_test.rs  elimination_je_test.rs  esg_validation_tests.rs  hr_integration.rs  manufacturing_integration.rs  notes_going_concern_test.rs  opening_balance_je_test.rs  pension_test.rs  project_accounting_validation_tests.rs  provision_test.rs  sampling_coherence_tests.rs  sampling_scots_test.rs  segment_reporting_test.rs  stock_comp_test.rs  subledger_settlement_test.rs  tax_validation_tests.rs  treasury_validation_tests.rs  unusual_analytical_test.rs
crates/datasynth-graph/: Cargo.toml  README.md
crates/datasynth-graph-export/: Cargo.toml  README.md
crates/datasynth-graph-export/src/: error.rs  (+10 more)
crates/datasynth-ocpm/: Cargo.toml
crates/datasynth-output/: Cargo.toml  README.md
crates/datasynth-runtime/: Cargo.toml  README.md
crates/datasynth-server/: Cargo.toml  build.rs
crates/datasynth-standards/: Cargo.toml  README.md
crates/datasynth-test-utils/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_parse.rs  dsf_load.rs  yaml_validation.rs
python/: CHANGELOG.md  README.md  pyproject.toml
python/datasynth_py/: __init__.py  async_client.py  client.py  dataframes.py
python/tests/: test_blueprints.py  test_config.py
(+1283 files in other folders)
