[workspace]
resolver = "2"
members = [
    "crates/datasynth-core",
    "crates/datasynth-config",
    "crates/datasynth-generators",
    "crates/datasynth-output",
    "crates/datasynth-runtime",
    "crates/datasynth-cli",
    "crates/datasynth-graph",
    "crates/datasynth-server",
    "crates/datasynth-ui/src-tauri",
    "crates/datasynth-test-utils",
    "crates/datasynth-eval",
    "crates/datasynth-ocpm",
    "crates/datasynth-banking",
    "crates/datasynth-fingerprint",
    "crates/datasynth-standards",
]
exclude = ["fuzz"]

# Root package for workspace-level benchmarks
[package]
name = "datasynth-workspace"
version = "0.6.1"
edition = "2021"
publish = false

[dev-dependencies]
datasynth-core = { path = "crates/datasynth-core" }
datasynth-config = { path = "crates/datasynth-config" }
datasynth-generators = { path = "crates/datasynth-generators" }
datasynth-output = { path = "crates/datasynth-output" }
datasynth-runtime = { path = "crates/datasynth-runtime" }
criterion = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }

[workspace.package]
version = "0.6.1"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.88"
authors = ["Michael Ivertowski <michael.ivertowski@ch.ey.com>"]
repository = "https://github.com/ey-asu-rnd/SyntheticData"
homepage = "https://github.com/ey-asu-rnd/SyntheticData"
documentation = "https://github.com/ey-asu-rnd/SyntheticData"
description = "High-performance synthetic data generator for enterprise accounting data"
keywords = ["synthetic-data", "accounting", "audit", "machine-learning", "fraud-detection"]
categories = ["simulation", "finance", "data-structures"]

[workspace.dependencies]
# Internal crates - version required for crates.io publishing
datasynth-core = { version = "0.6.1", path = "crates/datasynth-core" }
datasynth-config = { version = "0.6.1", path = "crates/datasynth-config" }
datasynth-generators = { version = "0.6.1", path = "crates/datasynth-generators" }
datasynth-output = { version = "0.6.1", path = "crates/datasynth-output" }
datasynth-runtime = { version = "0.6.1", path = "crates/datasynth-runtime" }
datasynth-graph = { version = "0.6.1", path = "crates/datasynth-graph" }
datasynth-server = { version = "0.6.1", path = "crates/datasynth-server" }
datasynth-test-utils = { version = "0.6.1", path = "crates/datasynth-test-utils" }
datasynth-eval = { version = "0.6.1", path = "crates/datasynth-eval" }
datasynth-ocpm = { version = "0.6.1", path = "crates/datasynth-ocpm" }
datasynth-banking = { version = "0.6.1", path = "crates/datasynth-banking" }
datasynth-fingerprint = { version = "0.6.1", path = "crates/datasynth-fingerprint" }
datasynth-standards = { version = "0.6.1", path = "crates/datasynth-standards" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Numeric - precise decimal arithmetic for financial calculations
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str", "maths"] }
rust_decimal_macros = "1.36"

# Random & Statistics
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"

# HTTP/REST
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Data formats - Arrow/Parquet for analytics-ready output
arrow = { version = "53", features = ["prettyprint"] }
parquet = { version = "53", features = ["arrow", "async", "zstd", "lz4", "snap"] }
csv = "1.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }

# UUID for document identifiers
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env", "string"] }
indicatif = { version = "0.17", features = ["rayon"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Security
argon2 = "0.5"
subtle = "2.6"

# OpenTelemetry (optional)
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
opentelemetry-prometheus = "0.27"
prometheus = "0.13"
tracing-opentelemetry = "0.28"

# Parallel processing
rayon = "1.10"
num_cpus = "1.16"
crossbeam-channel = "0.5"

# Signal handling
signal-hook = "0.3"

# HTTP client (streaming export)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# Regex
regex = "1.11"

# JWT (optional - OIDC token validation)
jsonwebtoken = "9"

# Redis (optional - distributed rate limiting)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# TLS
axum-server = { version = "0.7", features = ["tls-rustls"] }

# Testing
proptest = "1.5"
tempfile = "3.25"
assert_cmd = "2.0"
predicates = "3.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.bench]
lto = true
codegen-units = 1

# Workspace-level benchmarks
[[bench]]
name = "generation_throughput"
harness = false

[[bench]]
name = "distribution_sampling"
harness = false

[[bench]]
name = "output_sinks"
harness = false

[[bench]]
name = "scalability"
harness = false

[[bench]]
name = "correctness"
harness = false
