[package]
name = "datasynth-banking"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "KYC/AML banking transaction generator for synthetic data - compliance testing and fraud analytics"

[dependencies]
datasynth-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
csv = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
