[package]
name = "datasynth-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for synthetic accounting data generation"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "datasynth-data"
path = "src/main.rs"

[features]
default = ["streaming"]
streaming = ["dep:reqwest", "datasynth-runtime/streaming"]

[dependencies]
datasynth-core = { workspace = true }
datasynth-config = { workspace = true }
datasynth-eval = { workspace = true }
datasynth-generators = { workspace = true }
datasynth-output = { workspace = true }
datasynth-runtime = { workspace = true }
datasynth-audit-fsm = { workspace = true }
datasynth-banking = { workspace = true }
datasynth-fingerprint = { workspace = true }
datasynth-graph = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
itoa = { workspace = true }
ryu = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }
reqwest = { workspace = true, optional = true }

# Signal handling for pause/resume
[target.'cfg(unix)'.dependencies]
signal-hook = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
