[package]
name = "datasynth-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Evaluation framework for synthetic financial data quality and coherence"

[dependencies]
# Internal crates
datasynth-core = { workspace = true }
datasynth-config = { workspace = true }
datasynth-generators = { workspace = true }
datasynth-graph = { workspace = true }

# Numeric
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

# Statistics
statrs = "0.18"

# Date/Time
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Parallel processing
rayon = { workspace = true }

[dev-dependencies]
datasynth-test-utils = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
rust_decimal_macros = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }

