[package]
name = "datasynth-generators"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "50+ data generators covering GL, P2P, O2C, S2C, HR, manufacturing, audit, tax, treasury, and ESG"
keywords.workspace = true
categories.workspace = true

[dependencies]
datasynth-core = { workspace = true }
datasynth-config = { workspace = true }
datasynth-standards = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
