[package]
name = "datasynth-graph-export"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Graph export pipeline for converting synthetic data into RustGraph bulk-import format"
keywords = ["graph", "export", "pipeline", "synthetic-data", "rustgraph"]
categories.workspace = true

[features]
default = []
# Enable RustGraph bulk export support (BulkNodeData/BulkEdgeData conversions).
rustgraph = ["dep:rustgraph-api-types"]

[dependencies]
datasynth-core = { workspace = true }
datasynth-graph = { workspace = true }
datasynth-runtime = { workspace = true }
datasynth-ocpm = { workspace = true }
datasynth-banking = { workspace = true }
datasynth-generators = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }

[dependencies.rustgraph-api-types]
path = "../../../../RustGraph/RustGraph/crates/rustgraph-api-types"
optional = true

[dev-dependencies]
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
datasynth-core = { workspace = true }
datasynth-runtime = { workspace = true }
