[package]
name = "datasynth-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Graph/network export for synthetic accounting data - supports PyTorch Geometric, Neo4j, and DGL formats"

[features]
default = []
rustgraph = ["dep:rustgraph-api-types"]

[dependencies]
datasynth-core = { workspace = true }
datasynth-banking = { workspace = true }
datasynth-ocpm = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustgraph-api-types = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
rust_decimal_macros = { workspace = true }
uuid = { workspace = true }
