[package]
name = "datasynth-output"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Output sinks for CSV, Parquet, JSON, and streaming formats"

[dependencies]
datasynth-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
csv = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
itoa = { workspace = true }
ryu = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rust_decimal_macros = { workspace = true }
tempfile = { workspace = true }
