[package]
name = "datasynth-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Runtime orchestration, parallel execution, and memory management"

[features]
default = ["streaming"]
streaming = ["dep:reqwest"]

[dependencies]
datasynth-core = { workspace = true }
datasynth-config = { workspace = true }
datasynth-eval = { workspace = true }
datasynth-generators = { workspace = true }
datasynth-standards = { workspace = true }
datasynth-ocpm = { workspace = true }
datasynth-output = { workspace = true }
datasynth-banking = { workspace = true }
datasynth-fingerprint = { workspace = true }
datasynth-graph = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }
crossbeam-channel = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
csv = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
datasynth-test-utils = { workspace = true }
tempfile = { workspace = true }
