[package]
name = "datasynth-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Test utilities for synthetic data generation"

[dependencies]
# Internal crates
datasynth-core = { workspace = true }
datasynth-config = { workspace = true }
datasynth-banking = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Decimal
rust_decimal = { workspace = true }

# UUID
uuid = { workspace = true }

# Random
rand = { workspace = true }
rand_chacha = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP client for testing
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Testing utilities
tempfile = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
